# ba

./: README.md
Anhänge/: assessment sheet.txt
Anhänge/Assessment 1/: README.md
Anhänge/Assessment 1/Artificial Intelligence in Healthcare/: final_chapter.md  first_draft.md
Anhänge/Assessment 1/Conformance Testing of REST-based Web Services/: final_chapter.md  first_draft.md
Anhänge/Assessment 1/Deep Learning in Resource and Data Constrained Edge Computing Systems/: final_chapter.md  first_draft.md
Anhänge/Assessment 1/Model Context Protocol (MCP)/: final_chapter.md  first_draft.md
Anhänge/Assessment 3/: Bewertungen.xlsx  README.md  daten.txt
Anhänge/Assessment 3/Artificial Intelligence in Healthcare/: final_chapter.md  final_chapter2.md
Anhänge/Assessment 3/Conformance Testing of REST-based Web Services/: final_chapter.md  (+1 more)
Anhänge/Assessment 4/: TO DELETE  filtered_publications.json  final_related_work1.md  final_related_work2.md
Anhänge/Assessment 6/: 01_collected_publications.json  02_filtered_publications.json  03_processed_content.md  evaluation.json  final_related_work.md
test1/: final_chapter.md
test1/output/: first_draft.md
test2/: pyproject.toml
test2/logs/: crew_execution_log.json
test2/output/: first_draft.md
test2/src/test1/: crew.py  main.py
test2/src/test1/config/: tasks.yaml
test3/: README.md  pyproject.toml  research_flow_diagram.html
test3/src/test2/: main.py  research_flow.py
test4/: pyproject.toml
test5/: chroma_manager.py  example.env  pyproject.toml
test5/tools/: ArxivTool.py  OpenAlexTool.py  RetrievalTool.py
test6-FINAL/: README.md  chroma_manager.py  pyproject.toml
test6-FINAL/src/test2/: mcp_client.py  mcp_server.py  research_flow.py  tasks.yaml
test6-FINAL/src/test2/tools/: ArxivTool.py  OpenAlexTool.py
test6-FINAL/tools/: ArxivTool.py  OpenAlexTool.py  RetrievalTool.py
test6-FINAL/utils/: citation.py
(+31 files in other folders)
