[project]
name = "test2"
version = "0.1.0"
description = "test2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.0,<1.0.0",
]

[project.scripts]
kickoff = "test2.main:kickoff"
run_crew = "test2.main:kickoff"
plot = "test2.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
